Trying to reduce file sizes...

--- a/PIPER SSA Test Plan.html
+++ b/PIPER SSA Test Plan.html
@@ -1758,7 +1758,7 @@ div#notebook {
 <li>With aluminum wedge bonds, wirebond the SSA chip to the toothbrush board. This should require 6 wirebonds: one pair for each of IN, FB, and BIAS. See below for a completed example.</li>
 <li><em>[optional]</em> With gold wedge bonds, make thermal wirebonds from the toothbrush board to the SSA chip.</li>
 </ol>
-<img src="toothbrush-ssa_microscope.jpg">
+<img src="toothbrush-ssa_microscope.jpg" height=800>
 </div>
 </div>
 </div>
@@ -1979,7 +1979,7 @@ div#notebook {
 <li>Extracting and warming probe: 30 minutes (with heat gun, longer without)</li>
 <li>TOTAL: ~1 hr</li>
 </ul>
-<p>PIPER requires 32 modules to be tested for a total of ~30 hours of work, the majority of which may be performed by interns.</p>
+<p>PIPER requires 32 modules to be tested for a total of ~30 hours of work.</p>
 <p>2 dip probes are available, but only 1 PSquid card is available. By alternating the dip probes, the amount of attended work could be cut down to about 20 hours, since the warming of the probes may be left unattended.</p>
 <p>The testing phase could be reasonably completed with 1-2 weeks of testing.</p>
 </div>
@@ -1991,25 +1991,6 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <hr size=5>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Extra-Images">Extra Images<a class="anchor-link" href="#Extra-Images">&#182;</a></h2>
-</div>
-</div>
-</div>
-
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<img src="box.jpg"> <img src="probe.jpg"> <img src="probe2.jpg"> <img src="toothbrush_backplane.jpg">
 </div>
 </div>
 </div>
